--- a/.github/workflows/02_01_run_reuseable_workflow.yml
+++ b/.github/workflows/02_01_run_reuseable_workflow.yml
@@ -34,6 +34,7 @@ jobs:
         run: ls -la
 
   workflow-in-steps:
+    runs-on: ubuntu-latest
     steps:
       - name: LS the dir inside of the ran script
         run: ls -la
