--- a/.github/workflows/02_01_run_reuseable_workflow.yml
+++ b/.github/workflows/02_01_run_reuseable_workflow.yml
@@ -51,7 +51,7 @@ jobs:
 
 
   workflow-in-jobs:
-    needs: [do-it]
+    needs: [do-it-next-job]
     uses: ./.github/workflows/02_03_reusable_workflow_in_jobs.yml
     with:
       build_command: mvn clean install
